Platform-independent path in unit tests